--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,16 +1,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+   <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png">
 
   <title>676Fix.org</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="css/core-bootstrap.min.css" rel="stylesheet">
+  <link href="/css/tether.min.css" rel="stylesheet">
+  <link href="/css/core-bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/index.css" rel="stylesheet">
+  <link href="/css/index.css" rel="stylesheet">
 
-  <script src="js/jquery-3.1.1.slim.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="/js/jquery-3.1.1.slim.min.js"></script>
+  <script src="/js/tether.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src='/js/index.js'></script>
 </head>
