--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,37 +6,29 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link page active" href="/index" data-content='home'>Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Stewards</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FB chat</a>
+        <a class="nav-link" href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2F1774400062837525%2Fmembers%2F" target="_blank">FB chat</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Workman's Comp</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Local 676 Links</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Link 1</a>
-          <a class="dropdown-item" href="#">Link 2</a>
-          <a class="dropdown-item" href="#">Link 3</a>
-        </div>
+        <a class="nav-link" href="http://www.davidbfoxlaw.com/" target="_blank">Workman's Comp</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">IBT Links</a>
+        <a class="nav-link" href="http://www.ibtlocal676.org/" target="_blank">Local 676 Links</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://teamster.org/" target="_blank">IBT Links</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Gov Links</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">UPS Links</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link page" href="/pages/contact" data-content='contact'>Contact</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Credits</a>
