--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,23 +9,37 @@
       <li class="nav-item">
         <a class="nav-link page active" href="/index" data-content='home'>Home</a>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">FB Feed</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+         <a class="dropdown-item" href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2F1774400062837525%2Fmembers%2F" target="_blank">Members</a>
+         <a class="dropdown-item page" href="#" data-content='register'>Register</a>
+        </div>
+     </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Stewards</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2F1774400062837525%2Fmembers%2F" target="_blank">FB chat</a>
+        <a class="nav-link" href="#">Vote</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Poll</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://www.ibtlocal676.org/" target="_blank">Local 676 Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://teamster.org/" target="_blank">IBT Link</a>
+      </li>
+       <li class="nav-item dropdown">
+         <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gov Links</a>
+         <div class="dropdown-menu" aria-labelledby="dropdown02">
+          <a class="dropdown-item" href="http://nj.gov/labor/" target="_blank">NJ Labor Info</a>
+          <a class="dropdown-item" href="https://www.dol.gov/" target="_blank">US Labor</a>
+         </div>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="http://www.davidbfoxlaw.com/" target="_blank">Workman's Comp</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://www.ibtlocal676.org/" target="_blank">Local 676 Links</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://teamster.org/" target="_blank">IBT Links</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gov Links</a>
       </li>
       <li class="nav-item">
         <a class="nav-link page" href="/pages/contact" data-content='contact'>Contact</a>
