--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <!-- Custom styles for this template -->
   <link href="/css/index.css" rel="stylesheet">
 
-  <script src="/js/jquery-3.1.1.slim.min.js"></script>
+  <script src="/js/jquery-3.3.1.min.js"></script>
   <script src="/js/tether.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src='/js/index.js'></script>
