--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">FB Feed</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
          <a class="dropdown-item" href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fgroups%2F1774400062837525%2Fmembers%2F" target="_blank">Members</a>
-         <a class="dropdown-item page" href="#" data-content='register'>Register</a>
+         <a class="dropdown-item page" href="/pages/register" data-content='register'>Register</a>
         </div>
      </li>
       <li class="nav-item">
@@ -50,9 +50,5 @@
         <a class="nav-link" href="#">Credits</a>
       </li>
     </ul>
-<!--         <form class="form-inline my-2 my-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
   </div>
 </nav>
