--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,5 @@
   <script src="/js/tether.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src='/js/index.js'></script>
+  <audio id='playSound' preload='auto'><source src="/sounds/solidarity-forever.mp3"></source></audio>
 </head>
